--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,8 @@
  *= require twitter/bootstrap
  *= require twitter/bootstrap-responsive
 
+
+ *= require jquery.ui.datepicker
  *= require_self
  *= require_tree .
  */
