--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,54 +1,167 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Bootstrap</title>
-  <%= stylesheet_link_tag    "application.css" %>
-  <%= javascript_include_tag "application.js" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
 
-  <div class="navbar navbar-fixed-top ">
-    <div class="navbar-inner top ">
-      <div class="container">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </a>
-        <%= link_to("Bootstrap", "/", :class => "brand" )%>
-        <div class="nav-collapse">
-          <ul class="nav">
-            <li><%= link_to("Menu#1", "#") %></li>
-            <li><%= link_to("Menu#2", "#") %></li>
-            <li><%= link_to("Menu#3", "#") %></li>
-          </ul>
-          <ul class="nav pills pull-right">
-            <li><%= link_to("Menu#4", "#") %></li>
-            <li><%= link_to("Menu#5", "#") %></li>
-          </ul>
+  <head>
+    <meta charset="utf-8">
+    <title>Bootstrap, from Twitter</title>
+
+    <%= stylesheet_link_tag    "application.css" %>
+    <%= javascript_include_tag "application.js" %>
+    <%= csrf_meta_tags %>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+      .sidebar-nav {
+        padding: 9px 0;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+
+          <%- flash.each do |k, message| %>
+            <div class="alert fade in alert-<%=k%>">
+              <a href="#" class="close" data-dismiss="alert">x</a>
+              <%= message %>
+            </div>
+          <% end %>
+
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+
+          </a>
+          <a class="brand" href="#">Project name</a>
+          <div class="nav-collapse collapse">
+            <p class="navbar-text pull-right">Logged in as
+              <a href="#" class="navbar-link">Username</a>
+            </p>
+            <ul class="nav">
+              <li class="active">
+              <a href="#">Home</a>
+              </li>
+              <li>
+              <a href="#about">About</a>
+              </li>
+              <li>
+              <a href="#contact">Contact</a>
+              </li>
+            </ul>
+          </div>
+          <!--/.nav-collapse -->
         </div>
       </div>
     </div>
-  </div>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <!--/span-->
+        <div class="span12">
+          <%= yield %>
+          <div class="hero-unit">
+            <h1>Hello, world!</h1>
 
-  <div class="container">
-    <%- flash.each do |k, message| %>
-      <div class="alert fade in alert-<%=k%>">
-        <a href="#" class="close" data-dismiss="alert">x</a>
-        <%= message %>
-      </div>
-    <% end %>
+            <p>This is a template for a simple marketing or informational website. It
+            includes a large callout called the hero unit and three supporting pieces
+            of content. Use it as a starting point to create something more unique.</p>
+            <p>
+            <a class="btn btn-primary btn-large">Learn more &raquo;</a>
+            </p>
+          </div>
+          <div class="row-fluid">
+            <div class="span4">
+              <h2>Heading</h2>
 
-    <div class="content">
-      <div class="row">
-        <%= yield %>
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus
+              ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
+              sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed
+              odio dui.</p>
+              <p>
+              <a class="btn" href="#">View details &raquo;</a>
+              </p>
+            </div>
+            <!--/span-->
+            <div class="span4">
+              <h2>Heading</h2>
+
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus
+              ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
+              sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed
+              odio dui.</p>
+              <p>
+              <a class="btn" href="#">View details &raquo;</a>
+              </p>
+            </div>
+            <!--/span-->
+            <div class="span4">
+              <h2>Heading</h2>
+
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus
+              ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
+              sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed
+              odio dui.</p>
+              <p>
+              <a class="btn" href="#">View details &raquo;</a>
+              </p>
+            </div>
+            <!--/span-->
+          </div>
+          <!--/row-->
+          <div class="row-fluid">
+            <div class="span4">
+              <h2>Heading</h2>
+
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus
+              ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
+              sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed
+              odio dui.</p>
+              <p>
+              <a class="btn" href="#">View details &raquo;</a>
+              </p>
+            </div>
+            <!--/span-->
+            <div class="span4">
+              <h2>Heading</h2>
+
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus
+              ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
+              sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed
+              odio dui.</p>
+              <p>
+              <a class="btn" href="#">View details &raquo;</a>
+              </p>
+            </div>
+            <!--/span-->
+            <div class="span4">
+              <h2>Heading</h2>
+
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus
+              ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
+              sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed
+              odio dui.</p>
+              <p>
+              <a class="btn" href="#">View details &raquo;</a>
+              </p>
+            </div>
+            <!--/span-->
+          </div>
+          <!--/row-->
+        </div>
+        <!--/span-->
       </div>
+      <!--/row-->
+      <hr>
+      <footer>
+      <p>&copy; Company 2012</p>
+      </footer>
     </div>
-
-    <footer class="footer">
-      <p class="copyright">Copyright @2013 Bootstrap All rights reserved.</p>
-    </footer>
-  </div>
-</body>
+  </body>
 </html>
