--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-tw">
 
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap, from Twitter</title>
+    <meta http-equiv="Content-Language" content="zh-tw" />
+    <title>2013 台大數學營</title>
 
     <%= stylesheet_link_tag    "application.css" %>
     <%= javascript_include_tag "application.js" %>
@@ -21,146 +22,54 @@
         padding: 9px 0;
       }
     </style>
+    <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
   </head>
 
   <body>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-
+          <%= link_to "2013 台大數學營", root_path, :class => "brand" %>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span3">
+          <div class="well sidebar-nav">
+            <ul class="nav nav-list">
+              <li>
+                <%= link_to_unless_current "最新消息", news_index_path %>
+              </li>
+              <li>
+                <%= link_to_unless_current "營隊介紹", page_path("about") %>
+              </li>
+              <li>
+                <%= link_to_unless_current "我要報名", page_path("registration") %>
+              </li>
+              <li>
+                <%= link_to_unless_current "聯絡方式", page_path("contact") %>
+              </li>
+            </ul>
+          </div>
+          <!--/.well -->
+        </div>
+        <!--/span-->
+        <div class="span9">
           <%- flash.each do |k, message| %>
             <div class="alert fade in alert-<%=k%>">
               <a href="#" class="close" data-dismiss="alert">x</a>
               <%= message %>
             </div>
           <% end %>
-
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-
-          </a>
-          <a class="brand" href="#">Project name</a>
-          <div class="nav-collapse collapse">
-            <p class="navbar-text pull-right">Logged in as
-              <a href="#" class="navbar-link">Username</a>
-            </p>
-            <ul class="nav">
-              <li class="active">
-              <a href="#">Home</a>
-              </li>
-              <li>
-              <a href="#about">About</a>
-              </li>
-              <li>
-              <a href="#contact">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <!--/span-->
-        <div class="span12">
           <%= yield %>
-          <div class="hero-unit">
-            <h1>Hello, world!</h1>
-
-            <p>This is a template for a simple marketing or informational website. It
-            includes a large callout called the hero unit and three supporting pieces
-            of content. Use it as a starting point to create something more unique.</p>
-            <p>
-            <a class="btn btn-primary btn-large">Learn more &raquo;</a>
-            </p>
-          </div>
-          <div class="row-fluid">
-            <div class="span4">
-              <h2>Heading</h2>
-
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus
-              ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
-              sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed
-              odio dui.</p>
-              <p>
-              <a class="btn" href="#">View details &raquo;</a>
-              </p>
-            </div>
-            <!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus
-              ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
-              sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed
-              odio dui.</p>
-              <p>
-              <a class="btn" href="#">View details &raquo;</a>
-              </p>
-            </div>
-            <!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus
-              ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
-              sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed
-              odio dui.</p>
-              <p>
-              <a class="btn" href="#">View details &raquo;</a>
-              </p>
-            </div>
-            <!--/span-->
-          </div>
-          <!--/row-->
-          <div class="row-fluid">
-            <div class="span4">
-              <h2>Heading</h2>
-
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus
-              ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
-              sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed
-              odio dui.</p>
-              <p>
-              <a class="btn" href="#">View details &raquo;</a>
-              </p>
-            </div>
-            <!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus
-              ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
-              sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed
-              odio dui.</p>
-              <p>
-              <a class="btn" href="#">View details &raquo;</a>
-              </p>
-            </div>
-            <!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus
-              ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
-              sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed
-              odio dui.</p>
-              <p>
-              <a class="btn" href="#">View details &raquo;</a>
-              </p>
-            </div>
-            <!--/span-->
-          </div>
-          <!--/row-->
         </div>
         <!--/span-->
       </div>
       <!--/row-->
       <hr>
       <footer>
-      <p>&copy; Company 2012</p>
+      <p>&copy; NTU Math 2013</p>
       </footer>
     </div>
   </body>
