--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,6 +68,17 @@
       </div>
       <!--/row-->
       <hr>
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-0529325452859575";
+/* NTU Math */
+google_ad_slot = "6354911720";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
       <footer>
       <p>&copy; NTU Math 2013</p>
       </footer>
