--- a/app/views/admin/news/_form.html.erb
+++ b/app/views/admin/news/_form.html.erb
@@ -3,7 +3,8 @@
 
   <div class="form-inputs">
     <%= f.input :title %>
-    <%= f.input :content %>
+    <%= f.input :content, :hint => '可直接貼上 YouTube 連結、圖片連結、以及網址連結！', 
+      :input_html => {:rows => 10} %>
   </div>
 
   <div class="form-actions">
