--- a/app/views/admin/news/index.html.erb
+++ b/app/views/admin/news/index.html.erb
@@ -2,8 +2,7 @@
 
 <table class="table table-striped table-bordered table-condensed">
   <tr>
-    <th>Title</th>
-    <th>Content</th>
+    <th>標題</th>
     <th></th>
     <th></th>
     <th></th>
@@ -12,10 +11,9 @@
 <% @admin_news.each do |admin_news| %>
   <tr>
     <td><%= admin_news.title %></td>
-    <td><%= admin_news.content %></td>
-    <td><%= link_to 'Show', admin_news %></td>
-    <td><%= link_to 'Edit', edit_admin_news_path(admin_news) %></td>
-    <td><%= link_to 'Destroy', admin_news, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to '檢視', [:admin, admin_news] %></td>
+    <td><%= link_to '編輯', edit_admin_news_path(admin_news) %></td>
+    <td><%= link_to '刪除', admin_news, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
