--- a/app/views/admin/news/index.html.erb
+++ b/app/views/admin/news/index.html.erb
@@ -13,7 +13,7 @@
     <td><%= admin_news.title %></td>
     <td><%= link_to '檢視', [:admin, admin_news] %></td>
     <td><%= link_to '編輯', edit_admin_news_path(admin_news) %></td>
-    <td><%= link_to '刪除', admin_news, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to '刪除', [:admin, admin_news], method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
