--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -42,6 +42,9 @@
               <li>
                 <%= link_to_unless_current "最新消息", admin_news_index_path %>
               </li>
+              <li>
+                <%= link_to_unless_current "報名資訊", admin_registrations_path %>
+              </li>
               <% if user_signed_in? %>
                 <li>
                   <%= link_to "登出", destroy_user_session_path, :method => :delete %>
