Add paid to registrations.

--- a/app/views/admin/registrations/_form.html.erb
+++ b/app/views/admin/registrations/_form.html.erb
@@ -5,6 +5,7 @@
     <%= f.input :name %>
     <%= f.input :school %>
     <%= f.input :registe_date %>
+    <%= f.input :paid %>
   </div>
 
   <div class="form-actions">
